<resources>
    <string name="app_name">UltraSense</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start_record">Start Recording</string>
    <string name="button_stop_record">Stop Recording</string>
    <string name="button_play_signal">Play Signal</string>
    <string name="input_filename_record">Filename</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="info">Info:\nFiles are saved in \\Downloads\\UltraSense</string>
    <string name="spec_info_text">Spectrogram showing the original 20kHz line at the bottom after high-pass filtering, modulation and downsampling. Note that the first and last second are trimmed!</string>
    <string name="pref_mode">Ultrasound mode</string>
    <string name="cw_paras">CW and Detection Parameters</string>
    <string name="pref_title_fmcw_bottom_freq">Bottom Frequency in Hz</string>
    <string name="pref_title_fmcw_top_freq">Top Frequency in Hz</string>
    <string name="pref_title_fmcw_chirp_duration">Chirp Duration in seconds</string>
    <string name="pref_title_fmcw_chirp_cycles">Chirp Cycles</string>
    <string name="pref_fmcw_paras">FMCW Parameters</string>
    <string name="pref_title_fmcw_ramp_up">Ramp up and down</string>
    <string name="pref_title_cw_freq">Frequency</string>
    <string name="pref_key_fft_length">FFT length</string>
    <string name="pref_key_hopsize">Hopsize (fraction of fft length)</string>
    <string name="pref_key_halfCarrierWidth">Extend of carrier freq (halfed)</string>
    <string name="pref_key_db_threshold">db threshold</string>
    <string name="pref_key_feat_high_threshold">High Feature Treshold</string>
    <string name="pref_key_feat_low_threshold">Low Feature Threshold</string>
    <string name="pref_key_feat_slack">Feature Slack width</string>
    <string name="button_start_detection">Start Gesture Detection</string>
    <string name="button_stop_detection">Stop Gesture Detection</string>
    <string name="pref_key_use_precalibration">Use pre-calibrated values</string>
    <string name="button_start_activity_detection">Start Activity Detection</string>
    <string name="button_stop_activity_detection">Stop Activity Detection</string>
    <string name="app_name_example">UltraSenseEx</string>
    <string name="pref_ignore_settings_warning">Ignore Settings Warning</string>
    <string name="pref_key_ignore_noise">Ignore Noise</string>
    <string name="pref_max_feat_threshold">Max Feature Threshold (when ignoring noise) </string>
    <string name="pref_key_extractors">Extractors to use</string>
    <string name="pref_key_noisy_env">Consider noisy Environment</string>
    <string name="app_name_calibration">UltraSenseCalibration</string>
    <string name="calib_message">Press \"Record Calibration Audio\" and perform typical gestures (swipe, wave). You have 5 seconds to do so. Afterwards the app will provide the spectrogram.</string>
    <string name="button_record_calibration">Record Calibration Audio</string>
    <string name="app_name_gallery">UltraSenseGallery</string>

</resources>
